--- a/referent_introduction_annotation_guidelines.tex
+++ b/referent_introduction_annotation_guidelines.tex
@@ -186,7 +186,7 @@ Annotated on tier \texttt{norm{[}r-type{]}} in ExMARALDA
 We use the ReFlex annotation scheme to give each new referent a referential label.
 The original ReFlex paper can be found at \url{https://elib.uni-stuttgart.de/handle/11682/9028}.
 
-We use the following 9 labels:
+We use the following 10 labels:
 
 \begin{longtable}[]{@{}lll@{}}
 \toprule
@@ -728,12 +728,8 @@ In fact, the driver of the first car was the bald guy.
 This does not work with \texttt{pr+gen} referents.
 
 \begin{quote}
-\begin{itemize}
-\tightlist
-\item
-  There was a car.
-  A blue car was it.
-\end{itemize}
+* There was a car.
+A blue car was it.
 \end{quote}
 
 \begin{itemize}
@@ -746,11 +742,7 @@ This does not work with \texttt{pr+gen} referents.
 \end{itemize}
 
 \begin{quote}
-\begin{itemize}
-\tightlist
-\item
-  In fact, the driver of the first car was a bald guy.
-\end{itemize}
+* In fact, the driver of the first car was a bald guy.
 \end{quote}
 
 With an indefinite article,
@@ -1477,7 +1469,7 @@ A non-exhaustive list of bridging relationships:
 \item
   dog \textless-\textgreater{} leash
 \item
-  car crash -\textgreater{} cars
+  car crash \textless-\textgreater{} cars
 \end{itemize}
 
 \begin{quote}
