--- a/01-rtype.Rmd
+++ b/01-rtype.Rmd
@@ -23,8 +23,9 @@ We use the following 10 labels:
 | 6 | Given | `g` |
 | 7 | Given-Displaced | `gd` |
 | (8) | Further-Explanation | `+fe` |
-| (9) | Predicative | `pr` |
+| (9) | Predicative | `+pr` |
 | (10) | Generic | `gen` |
+| (11) | Introduction | `+intro`
 
 
 ## New
@@ -319,7 +320,7 @@ To resolve this, we use the `+fe` tag.
 * `car1` `n+fe`
 * `car2` `n+fe`
 
-Theoretically, `+fe` can attach to any r-type. In practice, it is usually attached to `n`.
+When a referent is annotated as `+fe`, it repeats the most recent r-type, plus `+fe`.
 
 > A dog ran into the street. A car `car1` `n` (a blue one `car1` `n+fe`) stopped suddenly.
 
@@ -363,15 +364,15 @@ Generic predicatives assign a characteristic to a referent,
 as described above.
 Almost all predicatives are generic.
 
-Generic predicative referents are tagged as `pr+gen`.
+Generic predicative referents are tagged as `gen+pr`.
 
 > There was a car `car1` `n`.
-> It `car2` `g` `subject` was a blue car `car1` `pr+gen` `characteristic`.
+> It `car2` `g` `subject` was a blue car `car1` `gen+pr` `characteristic`.
 
 As we see here, no new thing/person was introduced by the phrase "a blue car", it just added a new characteristic to `car1`.
 
 > There were two cars `cars` `n`.
-> The first car `car1` `g` `subject` was a blue car `car1` `pr+gen` `characteristic`.
+> The first car `car1` `g` `subject` was a blue car `car1` `gen+pr` `characteristic`.
 
 Similarly, "a blue car" does not introduce a new referent, but just adds a characteristic to an existing one.
 
@@ -395,7 +396,7 @@ with the two referents reversed
 
 > In fact, the driver of the first car was the bald guy.
 
-This does not work with `pr+gen` referents.
+This does not work with `gen+pr` referents.
 
 > \* There was a car.
 > A blue car was it.
@@ -418,10 +419,10 @@ doesn't name a particular thing/character in the narrative,
 but refers to a class of things in general.
 
 > The dog jumped at the ball.
-> You know, because it's a dog `pr+gen`,
+> You know, because it's a dog `gen+pr`,
 > and a dog `gen` is always gonna want to jump at a ball.
 
-The majority of generic referents that appeared in the data are [predicatives](#predicative). These are tagged as `pr+gen`.
+The majority of generic referents that appeared in the data are [predicatives](#predicative). These are tagged as `gen+pr`.
 
 However,
 there are cases where a "referent" is generic, but not predicative.
@@ -439,3 +440,47 @@ So, tagged generic referents must:
 
 > The dog jumped at a ball.
 > You know, dogs `untagged` are always gonna want to jump at a ball.
+
+## Introductions
+
+Introductions appear at the beginning of narratives.
+The speaker introduces the main events of the narrative,
+before going back and explaining more in-depth.
+
+> Oh my gosh I just saw this car crash!
+> A man and a woman were walking...
+
+Introductions can identified by two main factors:
+
+* They summarize a portion of the later narrative
+* They are temporally displaced - after the introduction,
+the speaker moves to a different time in the story's narrative.
+
+> I saw a car crash involving a little dog. `introduction`
+> So, I was in the parking lot, and a man and a woman were walking,
+> And a woman was unloading her groceries, she had a little dog.
+> And there were two cars which bumped into each other.
+
+The introduction in the example above summarizes the whole story,
+after which the speaker moves to the very beginning of the main story,
+and not to the events after the crash.
+
+Since introductions are separate from the main narrative,
+referents in the introduction are NOT tagged. If we tagged them, 
+we would have referents that are introduced twice - one time in the introduction, 
+and one time in the main story.
+
+In most cases, it is clear what is or is not an introduction. 
+If you hesitate, discuss with other annotators.
+
+Referents that occur in introductions are tagged as their base r-type `+intro`,
+and are not counted for any given/bridging/unused-unknown determinations 
+outside the introduction.
+
+> I just saw a car crash, where a dog `dog` `n+intro` almost got hit!
+> So, a man and a woman were walking, and a car `car1` `n (not b)` stopped suddenly ...
+
+Since `dog` appears in the intro, its r-type is tagged as `n+intro`.
+
+Although there is a `car crash <-> car1` bridging relationship,
+the car crash appears in the intro, and so is not counted for later bridging.
